--- a/A-Z Dog Service/dogFriendlyPlaces.html
+++ b/A-Z Dog Service/dogFriendlyPlaces.html
@@ -237,7 +237,7 @@
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="dog_friendly.mp4" type="video/mp4">
+        <source src="videos/dog_friendly.mp4" type="video/mp4">
     </video>
 
     <!-- Our NavBar -->
