--- a/A-Z Dog Service/government_hos.html
+++ b/A-Z Dog Service/government_hos.html
@@ -237,7 +237,7 @@
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="government_hospital.mp4" type="video/mp4">
+        <source src="videos/government_hospital.mp4" type="video/mp4">
     </video>
 
     <!-- Our NavBar -->
