--- a/A-Z Dog Service/groomingCenters.html
+++ b/A-Z Dog Service/groomingCenters.html
@@ -238,7 +238,7 @@
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="groomingVideo.mp4" type="video/mp4">
+        <source src="videos/groomingVideo.mp4" type="video/mp4">
     </video>
 
     <!-- Our NavBar -->
