--- a/A-Z Dog Service/index.html
+++ b/A-Z Dog Service/index.html
@@ -99,7 +99,7 @@
 <body class="vh-100 overflow-hidden">
     <!-- adding video in background -->
     <video id="background-video" autoplay loop muted>
-        <source src="training.mp4" type="video/mp4">
+        <source src="videos/training.mp4" type="video/mp4">
     </video>
 
 
