--- a/A-Z Dog Service/privateHospitals.html
+++ b/A-Z Dog Service/privateHospitals.html
@@ -237,7 +237,7 @@
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="public_services_video.mp4" type="video/mp4">
+        <source src="videos/public_services_video.mp4" type="video/mp4">
     </video>
 
     <!-- Our NavBar -->
