--- a/A-Z Dog Service/publicServices.html
+++ b/A-Z Dog Service/publicServices.html
@@ -18,17 +18,7 @@
     <title>Document</title>
 
     <script>
-        // function openloading() {
-        //     document.getElementById('show-btn').style.display = "none";
-        //     document.getElementById('r1').style.display = "block";
-        //     document.getElementById('map').style.display = "none";
-        //     setTimeout(() => {
-        //         document.getElementById('r1').style.display = "none";
-        //         var a = document.getElementById('map');
-        //         a.style.display = "block"
-        //     }, 3000);
-        // }
-
+       
         
     </script>
 
@@ -240,7 +230,7 @@
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="public_services_video.mp4" type="video/mp4">
+        <source src="videos/public_services_video.mp4" type="video/mp4">
     </video>
 
     <!-- Our NavBar -->
@@ -265,7 +255,7 @@
         <span class="ring-span"></span>
     </div> -->
 
-    <button class="btn-64" style="margin-left:300px; margin-top:290px" id="show-btn" onclick="window.open('ngo_location.html')" role="button"><span class="text btn-span">NGO's</span></button>
+    <button class="btn-64" style="margin-left:300px; margin-top:410px" id="show-btn" onclick="window.open('ngo_location.html')" role="button"><span class="text btn-span">NGO's</span></button>
     <button class="btn-64" style="margin-left:770px; margin-top:-63px" id="show-btn" onclick="window.open('government_hos.html')" role="button"><span class="text btn-span">Hospitals</span></button>
 </body>
 </html>
