--- a/A-Z Dog Service/training.html
+++ b/A-Z Dog Service/training.html
@@ -239,7 +239,7 @@
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="training_vdo.mp4" type="video/mp4">
+        <source src="videos/training_vdo.mp4" type="video/mp4">
     </video>
 
 <!-- Our NavBar -->
