--- a/A-Z Dog Service/dayCareCenters.html
+++ b/A-Z Dog Service/dayCareCenters.html
@@ -239,7 +239,7 @@
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="DCC1.mp4" type="video/mp4">
+        <source src="videos/DCC1.mp4" type="video/mp4">
     </video>
 
     <!-- Our NavBar -->
