--- a/A-Z Dog Service/ngo_location.html
+++ b/A-Z Dog Service/ngo_location.html
@@ -237,7 +237,7 @@
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="NGO_video.mp4" type="video/mp4">
+        <source src="videos/NGO_video.mp4" type="video/mp4">
     </video>
 
     <!-- Our NavBar -->
